@@ -10,7 +10,9 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import uk.gov.hmcts.reform.em.orchestrator.automatedbundling.configuration.BundleConfiguration;
 import uk.gov.hmcts.reform.em.orchestrator.automatedbundling.configuration.BundleConfigurationDocument;
+import uk.gov.hmcts.reform.em.orchestrator.automatedbundling.configuration.BundleConfigurationDocumentSelector;
 import uk.gov.hmcts.reform.em.orchestrator.automatedbundling.configuration.BundleConfigurationDocumentSet;
+import uk.gov.hmcts.reform.em.orchestrator.automatedbundling.configuration.BundleConfigurationDocumentSet.BundleConfigurationFilter;
 import uk.gov.hmcts.reform.em.orchestrator.automatedbundling.configuration.BundleConfigurationSort;
 import uk.gov.hmcts.reform.em.orchestrator.automatedbundling.configuration.BundleConfigurationSortOrder;
 import uk.gov.hmcts.reform.em.orchestrator.domain.enumeration.ImageRendering;
@@ -21,53 +23,24 @@ import uk.gov.hmcts.reform.em.orchestrator.service.dto.CcdBundleDTO;
 import uk.gov.hmcts.reform.em.orchestrator.service.dto.CcdBundlePaginationStyle;
 import uk.gov.hmcts.reform.em.orchestrator.stitching.dto.DocumentImage;
 
-import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-
 class BundleFactoryTest {
 
     private final BundleFactory factory = new BundleFactory();
-    private final ObjectNode emptyJson = new ObjectNode(new JsonNodeFactory(false));
-    private final File case1Json = new File(ClassLoader.getSystemResource("case-data1.json").getPath());
-    private final File case2Json = new File(ClassLoader.getSystemResource("case-data2.json").getPath());
-    private final File case3Json = new File(ClassLoader.getSystemResource("case-data3.json").getPath());
-    private final File case4Json = new File(ClassLoader.getSystemResource("case-data4.json").getPath());
-    private final File case5Json = new File(ClassLoader.getSystemResource("case-data5.json").getPath());
-    private final File case6Json = new File(ClassLoader.getSystemResource("case-data6.json").getPath());
-    private final File case7Json = new File(ClassLoader.getSystemResource("case-data7.json").getPath());
-    private final File customCaseJson = new File(ClassLoader.getSystemResource("case-data-custom.json").getPath());
     private final ObjectMapper mapper = new ObjectMapper();
+    private final ObjectNode emptyJson = JsonNodeFactory.instance.objectNode();
 
     @Test
     void create() throws DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            new ArrayList<>(),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+        BundleConfiguration configuration = configBuilder().build();
 
         CcdBundleDTO bundle = factory.create(configuration, emptyJson);
 
@@ -84,28 +57,12 @@ class BundleFactoryTest {
         "null, /case_details/id",
         "null, null"
     }, nullValues = {"null"})
-    void createWithVariousFileNameConfigurations(String filename,
-                                                 String fileNameIdentifier) throws DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            filename,
-            fileNameIdentifier,
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            new ArrayList<>(),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+    void createWithVariousFileNameConfigurations(String filename, String fileNameIdentifier)
+        throws DocumentSelectorException {
+        BundleConfiguration configuration = configBuilder()
+            .filename(filename)
+            .fileNameIdentifier(fileNameIdentifier)
+            .build();
 
         CcdBundleDTO bundle = factory.create(configuration, emptyJson);
 
@@ -114,31 +71,14 @@ class BundleFactoryTest {
 
     @Test
     void createWithDocumentSelect() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
                 new BundleConfigurationDocument("/folder/document")
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+            ))
+            .build();
 
-        JsonNode json = mapper.readTree(case1Json);
+        JsonNode json = loadJsonResource("case-data1.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document1.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -147,31 +87,16 @@ class BundleFactoryTest {
 
     @Test
     void createWithDocWithRedactedFlagAndRedactedDocNode() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
                 new BundleConfigurationDocument("/folder/document")
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            true,
-            "/customDocumentLink",
-            false);
+            ))
+            .hasCustomDocumentRedactedIdentifier(true)
+            .customDocumentRedactedIdentifier("/customDocumentLink")
+            .build();
 
-        JsonNode json = mapper.readTree(customCaseJson);
+        JsonNode json = loadJsonResource("case-data-custom.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document1.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -179,71 +104,37 @@ class BundleFactoryTest {
     }
 
     @Test
-    void createWithDocWithRedactedFalseAndRedactedDocNode() throws IOException, DocumentSelectorException {
-        //Redacted flag is set to false. We should have "/documentLink" node. In this case, we have
-        // "/redactedDocumentLink" node
-        // but the corresponding "/documentLink" node is missing
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+    void createWithDocWithRedactedFalseAndRedactedDocNode() throws IOException {
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
                 new BundleConfigurationDocument("/folder/document")
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+            ))
+            .build();
 
-        try {
-            JsonNode json = mapper.readTree(customCaseJson);
-            factory.create(configuration, json);
-        } catch (DocumentSelectorException docExp) {
-            assertTrue(docExp.getMessage()
-                .equalsIgnoreCase("Could not find the property /documentLink/document_url in the node: "));
-        }
+        JsonNode json = loadJsonResource("case-data-custom.json");
 
+        DocumentSelectorException exception = assertThrows(
+            DocumentSelectorException.class,
+            () -> factory.create(configuration, json)
+        );
+
+        assertTrue(exception.getMessage()
+            .equalsIgnoreCase("Could not find the property /documentLink/document_url in the node: "));
     }
 
     @Test
     void createWithDocWithRedactedTrueAndWithoutRedactedDocNode() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
                 new BundleConfigurationDocument("/folder/document")
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            true,
-            "/customDocumentLink",
-            false);
+            ))
+            .hasCustomDocumentRedactedIdentifier(true)
+            .customDocumentRedactedIdentifier("/customDocumentLink")
+            .build();
 
-        JsonNode json = mapper.readTree(case1Json);
+        JsonNode json = loadJsonResource("case-data1.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document1.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -252,31 +143,14 @@ class BundleFactoryTest {
 
     @Test
     void createWithDocumentSetSelect() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .build();
 
-        JsonNode json = mapper.readTree(case2Json);
+        JsonNode json = loadJsonResource("case-data2.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document1.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -286,64 +160,30 @@ class BundleFactoryTest {
 
     @Test
     void createWithDocumentFails() throws IOException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .build();
 
-        JsonNode json = mapper.readTree(case7Json);
+        JsonNode json = loadJsonResource("case-data7.json");
         assertThrows(BundleException.class, () -> factory.create(configuration, json));
     }
 
     @Test
     void createWithDocumentSetFilters() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Arrays.asList(
-                    new BundleConfigurationDocumentSet.BundleConfigurationFilter("/selectMe", "yesPlease"),
-                    new BundleConfigurationDocumentSet.BundleConfigurationFilter("/alsoSelectMe", "okayThen")
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of(
+                    new BundleConfigurationFilter("/selectMe", "yesPlease"),
+                    new BundleConfigurationFilter("/alsoSelectMe", "okayThen")
                 ))
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+            ))
+            .build();
 
-        JsonNode json = mapper.readTree(case3Json);
+        JsonNode json = loadJsonResource("case-data3.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document1.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -353,34 +193,17 @@ class BundleFactoryTest {
 
     @Test
     void createWithDocumentSetRegex() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Arrays.asList(
-                    new BundleConfigurationDocumentSet.BundleConfigurationFilter("/selectMe", "yes.*"),
-                    new BundleConfigurationDocumentSet.BundleConfigurationFilter("/alsoSelectMe", "okay.*")
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of(
+                    new BundleConfigurationFilter("/selectMe", "yes.*"),
+                    new BundleConfigurationFilter("/alsoSelectMe", "okay.*")
                 ))
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+            ))
+            .build();
 
-        JsonNode json = mapper.readTree(case3Json);
+        JsonNode json = loadJsonResource("case-data3.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document1.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -390,31 +213,16 @@ class BundleFactoryTest {
 
     @Test
     void createWithCustomDocumentNameDefined() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.ascending),
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .sortOrder(new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.ascending))
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            "/documentFileName",
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .documentNameIdentifier("/documentFileName")
+            .build();
 
-        JsonNode json = mapper.readTree(case4Json);
+        JsonNode json = loadJsonResource("case-data4.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document2.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -427,31 +235,15 @@ class BundleFactoryTest {
 
     @Test
     void createWithSortOrderAscending() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.ascending),
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .sortOrder(new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.ascending))
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .build();
 
-        JsonNode json = mapper.readTree(case2Json);
+        JsonNode json = loadJsonResource("case-data2.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document2.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -464,31 +256,15 @@ class BundleFactoryTest {
 
     @Test
     void createWithSortOrderDescending() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.descending),
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .sortOrder(new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.descending))
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .build();
 
-        JsonNode json = mapper.readTree(case2Json);
+        JsonNode json = loadJsonResource("case-data2.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document1.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -501,31 +277,15 @@ class BundleFactoryTest {
 
     @Test
     void createWithSortOrderDescendingAndMixOfDateTypes() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.descending),
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .sortOrder(new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.descending))
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .build();
 
-        JsonNode json = mapper.readTree(case5Json);
+        JsonNode json = loadJsonResource("case-data5.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document1.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -538,31 +298,15 @@ class BundleFactoryTest {
 
     @Test
     void createWithSortOrderAscendingWithNullDate() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.ascending),
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .sortOrder(new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.ascending))
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .build();
 
-        JsonNode json = mapper.readTree(case3Json);
+        JsonNode json = loadJsonResource("case-data3.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document2.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -575,31 +319,15 @@ class BundleFactoryTest {
 
     @Test
     void createWithCustomDateFieldNotDefined() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            "/documentFileName",
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .documentNameIdentifier("/documentFileName")
+            .build();
 
-        JsonNode json = mapper.readTree(case4Json);
+        JsonNode json = loadJsonResource("case-data4.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document1.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -621,31 +349,16 @@ class BundleFactoryTest {
         docImg.setCoordinateY(50);
         docImg.setDocmosisAssetId("schmcts.png");
 
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            "/documentFileName",
-            docImg,
-            false,
-            null,
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .documentNameIdentifier("/documentFileName")
+            .documentImage(docImg)
+            .build();
 
-        JsonNode json = mapper.readTree(case4Json);
+        JsonNode json = loadJsonResource("case-data4.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document4.pdf", bundle.getDocuments().get(3).getValue().getSourceDocument().getFileName());
@@ -653,40 +366,23 @@ class BundleFactoryTest {
         assertEquals("schmcts.png", bundle.getDocumentImage().getDocmosisAssetId());
         assertEquals(ImageRenderingLocation.allPages, bundle.getDocumentImage().getImageRenderingLocation());
         assertEquals(ImageRendering.opaque, bundle.getDocumentImage().getImageRendering());
-        assertEquals(Integer.valueOf(40), bundle.getDocumentImage().getCoordinateX());
-        assertEquals(Integer.valueOf(50), bundle.getDocumentImage().getCoordinateY());
-
+        assertEquals(40, bundle.getDocumentImage().getCoordinateX());
+        assertEquals(50, bundle.getDocumentImage().getCoordinateY());
     }
 
     @Test
     void createWithCustomDocumentLinkDefined() throws IOException, DocumentSelectorException {
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            "/case_details/id",
-            "FL-FRM-GOR-ENG-12345",
-            PageNumberFormat.numberOfPages,
-            new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.ascending),
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Arrays.asList(
+        BundleConfiguration configuration = configBuilder()
+            .sortOrder(new BundleConfigurationSort("/customTimeField", BundleConfigurationSortOrder.ascending))
+            .documents(List.of(
                 new BundleConfigurationDocument("/document1"),
-                new BundleConfigurationDocumentSet("/caseDocuments", Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            "/documentFileName",
-            null,
-            false,
-            "/document",
-            false,
-            null,
-            false);
+                new BundleConfigurationDocumentSet("/caseDocuments", List.of())
+            ))
+            .documentNameIdentifier("/documentFileName")
+            .documentRedactedIdentifier("/document")
+            .build();
 
-
-        JsonNode json = mapper.readTree(case6Json);
-
+        JsonNode json = loadJsonResource("case-data6.json");
         CcdBundleDTO bundle = factory.create(configuration, json);
 
         assertEquals("document2.pdf", bundle.getDocuments().get(0).getValue().getSourceDocument().getFileName());
@@ -700,33 +396,16 @@ class BundleFactoryTest {
     @Test
     void testAddDocumentThrowsExceptionForArrayProperty() {
         final String arrayPropertyPath = "/arrayDocument";
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            null,
-            null,
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Collections.singletonList(
-                new BundleConfigurationDocument(arrayPropertyPath)
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+        BundleConfiguration configuration = configBuilder()
+            .fileNameIdentifier(null)
+            .coverSheetTemplate(null)
+            .documents(List.of(new BundleConfigurationDocument(arrayPropertyPath)))
+            .build();
 
         ObjectNode caseData = JsonNodeFactory.instance.objectNode();
         ArrayNode arrayNode = JsonNodeFactory.instance.arrayNode();
         arrayNode.add(JsonNodeFactory.instance.objectNode().put("field", "value"));
-        caseData.set(arrayPropertyPath.substring(1), arrayNode); // remove leading "/"
+        caseData.set(arrayPropertyPath.substring(1), arrayNode);
 
         DocumentSelectorException exception = assertThrows(
             DocumentSelectorException.class,
@@ -739,33 +418,16 @@ class BundleFactoryTest {
     @Test
     void testAddDocumentSetThrowsExceptionForNonArrayProperty() {
         final String nonArrayPropertyPath = "/nonArrayDocumentSet";
-        BundleConfiguration configuration = new BundleConfiguration(
-            "Bundle title",
-            "filename.pdf",
-            null,
-            null,
-            PageNumberFormat.numberOfPages,
-            null,
-            true,
-            true,
-            true,
-            new ArrayList<>(),
-            Collections.singletonList(
-                new BundleConfigurationDocumentSet(nonArrayPropertyPath, Collections.emptyList())
-            ),
-            CcdBundlePaginationStyle.off,
-            null,
-            null,
-            false,
-            null,
-            false,
-            null,
-            false);
+        BundleConfiguration configuration = configBuilder()
+            .fileNameIdentifier(null)
+            .coverSheetTemplate(null)
+            .documents(List.of(new BundleConfigurationDocumentSet(nonArrayPropertyPath, List.of())))
+            .build();
 
         ObjectNode caseData = JsonNodeFactory.instance.objectNode();
         ObjectNode objectNode = JsonNodeFactory.instance.objectNode();
         objectNode.put("field", "value");
-        caseData.set(nonArrayPropertyPath.substring(1), objectNode); // remove leading "/"
+        caseData.set(nonArrayPropertyPath.substring(1), objectNode);
 
         DocumentSelectorException exception = assertThrows(
             DocumentSelectorException.class,
@@ -773,5 +435,114 @@ class BundleFactoryTest {
         );
 
         assertEquals("Element is not an array: " + nonArrayPropertyPath, exception.getMessage());
+    }
+
+    private JsonNode loadJsonResource(String resourceName) throws IOException {
+        try (InputStream is = getClass().getClassLoader().getResourceAsStream(resourceName)) {
+            if (is == null) {
+                throw new IllegalArgumentException("Resource not found: " + resourceName);
+            }
+            return mapper.readTree(is);
+        }
+    }
+
+    private static TestConfigBuilder configBuilder() {
+        return new TestConfigBuilder();
+    }
+
+    private static class TestConfigBuilder {
+        private String title = "Bundle title";
+        private String filename = "filename.pdf";
+        private String fileNameIdentifier = "/case_details/id";
+        private String coverSheetTemplate = "FL-FRM-GOR-ENG-12345";
+        private PageNumberFormat pageNumberFormat = PageNumberFormat.numberOfPages;
+        private BundleConfigurationSort sortOrder = null;
+        private boolean hasCoversheets = true;
+        private boolean hasTableOfContents = true;
+        private boolean hasFolderCoversheets = true;
+        private List<BundleConfigurationDocumentSelector> documents = new ArrayList<>();
+        private CcdBundlePaginationStyle paginationStyle = CcdBundlePaginationStyle.off;
+        private String documentNameIdentifier = null;
+        private DocumentImage documentImage = null;
+        private boolean enableRedaction = false;
+        private String documentRedactedIdentifier = null;
+        private boolean hasCustomDocumentRedactedIdentifier = false;
+        private String customDocumentRedactedIdentifier = null;
+
+        public TestConfigBuilder filename(String filename) {
+            this.filename = filename;
+            return this;
+        }
+
+        public TestConfigBuilder fileNameIdentifier(String fileNameIdentifier) {
+            this.fileNameIdentifier = fileNameIdentifier;
+            return this;
+        }
+
+        public TestConfigBuilder coverSheetTemplate(String coverSheetTemplate) {
+            this.coverSheetTemplate = coverSheetTemplate;
+            return this;
+        }
+
+        public TestConfigBuilder sortOrder(BundleConfigurationSort sortOrder) {
+            this.sortOrder = sortOrder;
+            return this;
+        }
+
+        public TestConfigBuilder documents(List<BundleConfigurationDocumentSelector> documents) {
+            this.documents = documents;
+            return this;
+        }
+
+        public TestConfigBuilder documentNameIdentifier(String documentNameIdentifier) {
+            this.documentNameIdentifier = documentNameIdentifier;
+            return this;
+        }
+
+        public TestConfigBuilder documentImage(DocumentImage documentImage) {
+            this.documentImage = documentImage;
+            return this;
+        }
+
+        public TestConfigBuilder documentRedactedIdentifier(String documentRedactedIdentifier) {
+            this.documentRedactedIdentifier = documentRedactedIdentifier;
+            return this;
+        }
+
+        public TestConfigBuilder hasCustomDocumentRedactedIdentifier(boolean value) {
+            this.hasCustomDocumentRedactedIdentifier = value;
+            return this;
+        }
+
+        public TestConfigBuilder customDocumentRedactedIdentifier(String customDocumentRedactedIdentifier) {
+            this.customDocumentRedactedIdentifier = customDocumentRedactedIdentifier;
+            return this;
+        }
+
+        public BundleConfiguration build() {
+            return new BundleConfiguration(
+                title,
+                filename,
+                fileNameIdentifier,
+                coverSheetTemplate,
+                pageNumberFormat,
+                sortOrder,
+                hasCoversheets,
+                hasTableOfContents,
+                hasFolderCoversheets,
+                new ArrayList<>(),
+                documents,
+                paginationStyle,
+                documentNameIdentifier,
+                documentImage,
+                enableRedaction,
+                documentRedactedIdentifier,
+                hasCustomDocumentRedactedIdentifier,
+                customDocumentRedactedIdentifier,
+                null, // hasDocumentSubtitles
+                null, // hasDocumentOutlineSubtitles
+                null  // hasTableOfContentsSubtitles
+            );
+        }
     }
 }
